<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alaatank.myfirstapp.signup_form">

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:ems="90"
        android:hint="@string/register_user_name"
        android:inputType="textPersonName"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frsitName"
        android:layout_below="@+id/userName"
        android:layout_alignRight="@+id/userName"
        android:layout_alignEnd="@+id/userName"
        android:layout_marginTop="1dp"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName"
        android:hint="@string/register_first_name"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastName"

        android:hint="@string/register_last_name"
        android:layout_below="@+id/frsitName"
        android:layout_alignLeft="@+id/frsitName"
        android:layout_alignStart="@+id/frsitName"
        android:textSize="30sp"
        android:layout_alignRight="@+id/frsitName"
        android:layout_alignEnd="@+id/frsitName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/lastName"
        android:layout_alignLeft="@+id/lastName"
        android:layout_alignStart="@+id/lastName"
        android:layout_marginTop="1dp"
        android:hint="@string/register_password"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="1dp"
        android:hint="@string/register_email"
        android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_register"
        android:id="@+id/register"
        android:onClick="login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp" />
</RelativeLayout>
